--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -68,4 +70,33 @@ dependencies {
     // material3
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     implementation "androidx.compose.material3:material3:1.0.1"
+
+    //Dagger - Hilt
+    implementation 'com.google.dagger:hilt-android:2.44'
+    //May need OkHttp also
+
+    // Dagger - Hilt
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4"
+
+    // To use Kotlin coroutines with lifecycle-aware components
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //GSON converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
