--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,7 @@ dependencies {
     //May need OkHttp also
 
     // Dagger - Hilt
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "com.google.dagger:hilt-compiler:2.44"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
